syntax = "proto3";

package auth;

service AuthService {
    rpc Login (LoginRequest) returns (AuthResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    bool success = 1;
    optional string token = 2;
}